<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" >Kimia
    </string>
    <string name="action_settings" >Settings
    </string>

    <string name="Accounts" >Accounts</string>
    <string name="save" >Save</string>
    <string name="cancel" >Cancel</string>
    <string name="group" >Group</string>
    <string name="cod" >Cod</string>
    <string name="name" >Name</string>
    <string name="tel" >Tel</string>
    <string name="mobile" >Mobile</string>
    <string name="fax" >Fax</string>
    <string name="preference" >Pre</string>
    <string name="tip" >tip</string>
    <string name="visible" >visi</string>
    <string name="Delete" >Delete</string>
    <string name="Add" >Add</string>
    <string name="customer" >Customer</string>
    <string name="maker" >Maker</string>
    <string name="registred" >submit</string>
    <string name="deleted" >Deleted</string>
    <string name="error_cod_duplicate" >Cod id duplicate!</string>
    <string name="error" >Error</string>
    <string name="error_cod_number" >Number</string>
    <string name="error_name" >Name is empty</string>
    <string name="Search">Search</string>
    <string name="Edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="Products">Products</string>
    <string name="Accept">Accept</string>
    <string name="Null">NULL</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="is_empty">is empty!</string>
    <string name="Deleted_Q">Deleted?</string>
    <string name="Edited">edited</string>
    <string name="search_hint">hint</string>


</resources>