<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ItemCancel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/cancel"/>

    <item
        android:id="@+id/ItemAccept"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/Accept"/>

    <item
        android:id="@+id/ItemSearch"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        android:title="@string/Search"
        android:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/ItemDelete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/Delete"/>

    <item
        android:id="@+id/ItemEdit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/Edit"/>

    <item
        android:id="@+id/ItemAdd"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_new"
        android:title="@string/Add"/>

</menu>