<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="17"
            android:columnCount="2"
            android:layout_gravity="right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:id="@+id/ProductTextGroupID"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/name"
                android:id="@+id/ProductTextName"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp" />

            <AutoCompleteTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/ProductEditGroupID"
                android:textSize="25sp" />

            <EditText
                android:layout_height="wrap_content"
                android:id="@+id/ProductEditName"
                android:layout_width="match_parent"
                android:text="@string/name"
                android:textSize="25sp"
                android:layout_gravity="center_vertical"
                android:ems="5"
                android:gravity="start"
                android:paddingStart="20dp"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <ListView
                android:id="@+id/Product_ListGroup"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:choiceMode="singleChoice"
                android:listSelector="@android:color/holo_blue_bright"
                android:background="#ccc"
                android:layout_columnSpan="2"
                android:fastScrollEnabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maker"
                android:id="@+id/ProductTextMaker"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />


            <AutoCompleteTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/ProductEditMaker"
                android:textSize="25sp" />

            <ListView
                    android:id="@+id/Product_ListMaker"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:choiceMode="singleChoice"
                    android:listSelector="@android:color/holo_blue_bright"
                    android:background="#ccc"
                    android:layout_columnSpan="2"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cod"
                android:id="@+id/ProductTextCod"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ProductEditCod"
                android:text="@string/cod"
                android:textSize="25sp"
                android:layout_gravity="center_vertical"
                android:ems="5"
                android:gravity="start"
                android:paddingStart="20dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:selectAllOnFocus="true"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:id="@+id/ProductTextTip"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ProductEditTip"
                android:text="@string/tip"
                android:textSize="25sp"
                android:ems="5"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:paddingStart="20dp"
                android:clickable="false"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visible"
                android:id="@+id/ProductTextVisible"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:paddingStart="20dp"
                android:paddingEnd="10dp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ProductSwitchVisible"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:paddingStart="20dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_columnSpan="2"/>


        </GridLayout>

    </ScrollView>

</RelativeLayout>